fix z-index for editorWrapper

--- a/client/src/components/Segment/styles.css
+++ b/client/src/components/Segment/styles.css
@@ -23,6 +23,7 @@
   box-sizing: inherit;
   border: inherit;
   align-items: inherit;
+  z-index: auto;
 }
 
 .format {
